@@ -20,6 +20,10 @@ dh-make-perl (0.73-1) UNRELEASED; urgency=low
   [ Damyan Ivanov ]
   * Add --vcs option, guiding VCS-* headers' creation in --pkg-perl mode. It
     also helps with the initial repository creation for Git
+  * Do not die when the WNPP cache cannot be read, for example due to binary
+    format change in Storable. Also, use platform-independent storage.
+    Closes: #626987 - dh-make-perl: Debian::WNPP::Query does not correctly
+    invalidate cache or use platform-netural Storable format
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 25 May 2011 16:04:40 +0200
 
